# dagal

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: rust.yml
src/: lib.rs
src/abstraction/: device.rs  instance.rs  mod.rs  prelude.rs  queue.rs
src/abstraction/debugging/: mod.rs  traits.rs
src/abstraction/descriptors/: enums.rs
src/abstraction/physical_device/: mod.rs  selector.rs
src/abstraction/pipeline/: graphics_pipeline.rs  mod.rs  traits.rs
src/abstraction/resource/: buffer.rs  image.rs  mod.rs  traits.rs
src/abstraction/utility/: deferred_deletion_queue.rs  mod.rs  storage.rs
src/abstraction/wsi/: mod.rs  surface.rs  swapchain.rs
src/framework/: mod.rs
src/framework/bootstrap/: mod.rs
