[package]
name = "dagal"
version = "0.0.1"
authors = ["Danny <dannylewastaken@protonmail.com>"]
edition = "2021"

[lib]
name = "dagal"
path = "src/lib.rs"
doctest = true
crate-type = ["lib"]

[dependencies]
ash = "0.37.3"
gpu-allocator = { version = "0.25.0", optional = true }

[dev-dependencies]
ash = { version = "0.37.3", features = ["linked"], optional = false }
raw-window-handle = "0.5.0"
ash-window = "0.12.0"


[dependencies.winit]
version = "0.29.3"
default-features = true
features = ["rwh_05"]
optional = true

[dev-dependencies.winit]
version = "0.29.3"
default-features = true
features = ["rwh_05"]